# Deepwave-cli

./: .gitignore  MANIFEST.in  QUICK_START.md  README.md  TESTING.md  install.sh  pyproject.toml  setup.py
.github/workflows/: release.yml
cli/: __init__.py  auth.py  build.bat  build.sh  config.py  deepwave.spec  install.sh  main.py  requirements.txt
cli/commands/: analyze.py  login.py  upload.py
cli/services/: analyze_service.py
deepwave_engine/: ignore.py  models.py  stats.py  test_smoke.py
deepwave_engine/binder/: __init__.py  binder_treesitter.py  expression_resolver.py  import_graph_treesitter.py  symbol_index_treesitter.py
deepwave_engine/bundle/: writer.py
deepwave_engine/frameworks/: base.py  detector.py  factory.py
deepwave_engine/frameworks/django/: filter.py  mapper.py
deepwave_engine/frameworks/fastapi/: dependency_resolver.py  discovery.py  filter.py  mapper.py
deepwave_engine/graph/: call_graph.py  core_graph.py
deepwave_engine/parser/: __init__.py  import_analyzer.py  query_engine.py
engine/: analyze.py  models.py  test_smoke.py
engine/binder/: binder_treesitter.py  expression_resolver.py  import_graph_treesitter.py  symbol_index_treesitter.py
engine/bundle/: schema.py  writer.py
engine/frameworks/: base.py  detector.py  factory.py
engine/frameworks/django/: filter.py  mapper.py
engine/frameworks/fastapi/: dependency_resolver.py  discovery.py  filter.py  mapper.py
engine/graph/: call_graph.py  core_graph.py  file_tree.py
engine/parser/: import_analyzer.py  query_engine.py
tests/: __init__.py
(+12 files in other folders)
