[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepwave-cli"
dynamic = ["version"]
description = "Command-line interface for analyzing codebases and uploading results to Deepwave"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Deepwave", email = "support@deepwave.dev"}
]
urls = {Homepage = "https://github.com/Deepwave-dev/Deepwave-cli"}
keywords = ["code-analysis", "cli", "deepwave", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
    "GitPython>=3.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
deepwave = "cli.main:cli"

[tool.setuptools]
packages = {find = {exclude = ["tests", "*.tests", "*.tests.*", "venv"]}}

[tool.setuptools.dynamic]
version = {attr = "cli.__version__"}

[tool.setuptools.package-data]
engine = [
    "parser/queries/**/*.scm",
]

